[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/Game.gd" type="Script" id=1]
[ext_resource path="res://src/Camera.gd" type="Script" id=2]
[ext_resource path="res://assets/shaders/WaterShader.shader" type="Shader" id=3]
[ext_resource path="res://assets/shaders/Wireframe.shader" type="Shader" id=4]
[ext_resource path="res://src/WaveFunctionCollapse.gd" type="Script" id=5]
[ext_resource path="res://assets/shaders/VoxelSpereInside.shader" type="Shader" id=6]
[ext_resource path="res://assets/shaders/LandShader.shader" type="Shader" id=7]
[ext_resource path="res://assets/shaders/PossibilityCube.shader" type="Shader" id=8]
[ext_resource path="res://assets/shaders/VoxelSpereOutside.shader" type="Shader" id=9]
[ext_resource path="res://src/SDFGen.gd" type="Script" id=10]
[ext_resource path="res://assets/1px.png" type="Texture" id=11]
[ext_resource path="res://assets/shaders/SDFGen.shader" type="Shader" id=12]
[ext_resource path="res://assets/palette.png" type="Texture" id=13]
[ext_resource path="res://assets/shaders/SDFRenderer.shader" type="Shader" id=14]

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 7 )
shader_param/u_sun_pos = null
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_sdf_quintic_filter = null
shader_param/u_texture = ExtResource( 13 )

[sub_resource type="Texture3D" id=2]
data = {
"depth": 0,
"flags": 4,
"format": 37,
"height": 0,
"layers": [  ],
"width": 0
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/u_deep_colour = Plane( 1, 1, 1, 1 )
shader_param/u_shallow_colour = Plane( 1, 1, 1, 1 )
shader_param/u_camera_pos = Vector3( 0, 0, 0 )
shader_param/u_sun_pos = null
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_sdf_quintic_filter = null
shader_param/u_3d_noise = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 8 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 9 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 4 )

[sub_resource type="ArrayMesh" id=8]

[sub_resource type="SphereShape" id=9]
radius = 10.0

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 12 )
shader_param/u_mesh_tex_size = null
shader_param/u_num_tris = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_draw_idx = null
shader_param/u_use_bounding_sphere = null
shader_param/u_bound_origin = null
shader_param/u_bound_radius = null

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("SDFGen/Viewport")

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 14 )
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_cam_pos = null

[sub_resource type="CubeMesh" id=13]
material = SubResource( 14 )

[sub_resource type="SphereMesh" id=16]
radius = 5.0
height = 10.0

[sub_resource type="SpatialMaterial" id=17]
flags_unshaded = true
albedo_color = Color( 1, 0.843137, 0, 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )
land_material = SubResource( 15 )
water_material = SubResource( 3 )
poss_cube_material = SubResource( 4 )
voxel_inside_material = SubResource( 5 )
voxel_outside_material = SubResource( 6 )
radius = 10.0
relax_iterations = 50
water_deep_colour = Color( 0.113725, 0.52549, 0.976471, 1 )
water_shallow_colour = Color( 0.207843, 0.882353, 1, 1 )
cell_height = 1.0
grid_height = 3
water_height = 0.9

[node name="Globe" type="MeshInstance" parent="."]
transform = Transform( 1, 0.000106591, -0.000468148, -0.000107254, 0.999999, -0.0014405, 0.000467997, 0.00144055, 0.999999, 0, 0, 0 )
visible = false

[node name="GlobeOcean" type="MeshInstance" parent="."]

[node name="GlobeWireframe" type="MeshInstance" parent="."]
visible = false
material_override = SubResource( 7 )

[node name="GlobeLand" type="MeshInstance" parent="."]
transform = Transform( 0.999998, -0.000705984, 0.00198889, 0.000705835, 1, 7.68196e-05, -0.00198894, -7.54311e-05, 0.999998, 0, 0, 0 )
mesh = SubResource( 8 )

[node name="HGimbal" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="VGimbal" type="Spatial" parent="HGimbal"]

[node name="Camera" type="Camera" parent="HGimbal/VGimbal"]
transform = Transform( 1, 0, 0, 0, 0.993052, -0.117676, 0, 0.117676, 0.993052, 0, -2.48124, 24.3437 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 9 )

[node name="WaveFunctionCollapse" type="Node" parent="."]
script = ExtResource( 5 )

[node name="SDFGen" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Viewport" type="Viewport" parent="SDFGen"]
hdr = false
keep_3d_linear = true
usage = 3
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 0

[node name="Rect" type="TextureRect" parent="SDFGen/Viewport"]
material = SubResource( 11 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )
expand = true

[node name="SDFPreview" type="TextureRect" parent="SDFGen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 12 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SDFVolume" type="MeshInstance" parent="SDFGen"]
visible = false
mesh = SubResource( 13 )
material/0 = null

[node name="SunGimbal" type="Spatial" parent="."]
transform = Transform( -0.78672, 0, -0.617311, 0, 1, 0, 0.617311, 0, -0.78672, 0, 0, 0 )

[node name="Sun" type="MeshInstance" parent="SunGimbal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.4901, 19.7454, 0 )
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer"]
margin_right = 123.0
margin_bottom = 40.0

[node name="QuinticFilteringLabel" type="Label" parent="VSplitContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 111.0
margin_bottom = 27.0
text = "Quintic Filtering: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuinticFilteringValue" type="Label" parent="VSplitContainer/HBoxContainer"]
margin_left = 115.0
margin_top = 13.0
margin_right = 123.0
margin_bottom = 27.0
text = "0"
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
